[package]
name = "redss-core-dao"
version = "0.1.0"
authors = ["Andrea Chiumenti <achiumenti@red.software.systems>"]

[dependencies]
tokio = "0.1.7"
# tokio-postgres = {version = "0.3.0", futures = ["with-uuid","with-rustc-serialize"]}
tokio-postgres = {git = "https://github.com/sfackler/rust-postgres", features = ["with-uuid-0.6","with-serde_json-1"]}
futures = "0.1.23"
rustc-serialize = "0.3.24"
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"
uuid = "0.6.5"
